feat: reactivate institution endpoint
